play against human logic

--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "devDependencies": {
     "@types/ink": "^2.0.3",
     "@types/node": "^24.0.13",
-    "@types/react": "^19.1.8"
+    "@types/react": "^19.1.8",
+    "react-devtools-core": "^6.1.5"
   },
   "dependencies": {
     "chalk": "^5.4.1",
