--- a/package.json
+++ b/package.json
@@ -2,8 +2,7 @@
   "devDependencies": {
     "@types/ink": "^2.0.3",
     "@types/node": "^24.0.13",
-    "@types/react": "^19.1.8",
-    "react-devtools-core": "^6.1.5"
+    "@types/react": "^19.1.8"
   },
   "dependencies": {
     "chalk": "^5.4.1",
